@@ -708,10 +708,6 @@ Bug fixes
 * LUCENE-3589: BytesRef copy(short) didnt set length.
   (Peter Chang via Robert Muir)
 
-* SOLR-3076: ToParent/ChildBlockJoinQuery was not handling an incoming
-  filter nor deleted docs correctly (Mikhail Khludnev via Mike
-  McCandless).
-  
 ======================= Lucene 3.6.0 =======================
 
 Changes in backwards compatibility policy
